<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_search_menu"
            android:icon="@drawable/ic_search_white_24px"
            android:orderInCategory="100"
            android:title="@string/search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"
            />
    <item
        android:id="@+id/action_team_list"
        android:title="@string/team_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_standings_list"
        android:title="@string/standings_list"
        app:showAsAction="never"/>
    <item
            android:id="@+id/action_favorite_match"
            android:title="@string/favorite_match"
            app:showAsAction="never"/>
</menu>