<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

    <TextView
            android:id="@+id/tv_match_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FFB74A"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

        <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

            <ImageView
                    android:id="@+id/img_team_win_badge"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/badge_team"
                    android:scaleType="fitXY" />

            <TextView
                    android:id="@+id/tv_team_win_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
        </LinearLayout>

        <TextView
                android:id="@+id/tv_team_win_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/strip"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        <LinearLayout


                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

            <ImageView
                    android:id="@+id/team_lose_badge"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/badge_team"
                    android:scaleType="fitXY" />

            <TextView
                    android:id="@+id/tv_team_lose_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#F8D762"
            android:text="@string/information"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold" />
    <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    <TextView
            android:id="@+id/tv_match_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:columnCount="3"
            android:rowCount="4"
            android:useDefaultMargins="true">

        <TextView
                android:id="@+id/tv_team_win_goal_detail"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/goals_detail"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_goal_detail"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_yellow_card"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/yellow_card"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_yellow_card"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_red_card"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/red_card"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_red_card"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_goal_keeper"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/goal_keeper"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_goal_keeper"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_defense"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/defense"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_defense"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_mid_field"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/mid_field"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_mid_field"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_forward"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/forward"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_forward"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:id="@+id/tv_team_win_substitutes"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#F8CB9F"
                android:text="@string/substitutes"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_team_lose_substitutes"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

    </GridLayout>
</LinearLayout>